force-app/main/default/objects/G2M_Settings_Obj__c/G2M_Settings_Obj__c.object-meta.xml
<CustomObject>
    <label>G2M Settings Obj</label>
    <nameField>
        <label>G2M Settings Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>G2M Settings Objs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>