force-app/main/default/objects/G2M_Settings_Obj__c/fields/Access_Token_Received_At__c.field-meta.xml
<CustomField>
    <fullName>Access_Token_Received_At__c</fullName>
    <label>Access Token Received At</label>
    <type>DateTime</type>
</CustomField>