force-app/main/default/objects/G2M_Settings_Obj__c/fields/Account_Key__c.field-meta.xml
<CustomField>
    <fullName>Account_Key__c</fullName>
    <label>Account Key</label>
    <length>50</length>
    <type>Text</type>
</CustomField>