force-app/main/default/objects/G2M_Settings_Obj__c/fields/Admin_Email__c.field-meta.xml
<CustomField>
    <fullName>Admin_Email__c</fullName>
    <label>Admin Email</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>