force-app/main/default/objects/G2M_Settings_Obj__c/fields/Admin_Password__c.field-meta.xml
<CustomField>
    <fullName>Admin_Password__c</fullName>
    <label>Admin Password</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>