force-app/main/default/objects/G2M_Settings_Obj__c/fields/Consumer_Key__c.field-meta.xml
<CustomField>
    <fullName>Consumer_Key__c</fullName>
    <label>Consumer Key</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>