force-app/main/default/objects/G2M_Settings_Obj__c/fields/Consumer_Secret__c.field-meta.xml
<CustomField>
    <fullName>Consumer_Secret__c</fullName>
    <label>Consumer Secret</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>