force-app/main/default/objects/G2M_Settings_Obj__c/fields/Expires_in__c.field-meta.xml
<CustomField>
    <fullName>Expires_in__c</fullName>
    <label>Expires in</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>